<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="xyz.codeme.smart321.LoginActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="40sp"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="25sp"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_above="@id/edit_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:text="@string/dialog_info"/>

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_remote_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_ok"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:padding="25dp"
        android:onClick="clickOkButton"/>

</RelativeLayout>
